# a2-cv

./: CMakeLists.txt  README.md
data/: output_feature_vectors.csv
include/: csv_util.h  helpers.h
src/: baselineMatcherMain.cpp  blueTrashCanFinder.cpp  csv_util.cpp  customDesign.cpp  featureVectorWriter.cpp  helpers.cpp  histogramMain.cpp  multiHistogramMain.cpp  textureColor.cpp
