cmake_minimum_required(VERSION 3.10)
project(MyProject)
find_package(OpenCV REQUIRED)
include_directories(include)
add_executable(FeatureVectorWriter include/csv_util.h ./src/featureVectorWriter.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(FeatureVectorWriter ${OpenCV_LIBS})
add_executable(BaselineMatcherMain include/csv_util.h ./src/baselineMatcherMain.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(BaselineMatcherMain ${OpenCV_LIBS})
add_executable(HistogramMain include/csv_util.h ./src/histogramMain.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(HistogramMain ${OpenCV_LIBS})
add_executable(MultiHistogramMain include/csv_util.h ./src/multiHistogramMain.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(MultiHistogramMain ${OpenCV_LIBS})
add_executable(TextureColor include/csv_util.h ./src/textureColor.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(TextureColor ${OpenCV_LIBS})
add_executable(CustomDesign include/csv_util.h ./src/customDesign.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(CustomDesign ${OpenCV_LIBS})
add_executable(BlueTrash include/csv_util.h ./src/blueTrashCanFinder.cpp ./src/helpers.cpp ./src/csv_util.cpp)
target_link_libraries(BlueTrash ${OpenCV_LIBS})